potential fix for icon bleed

--- a/app/assets/stylesheets/components/_transactions.scss
+++ b/app/assets/stylesheets/components/_transactions.scss
@@ -27,6 +27,9 @@
   position: relative;
   font-weight: 600;
   color: $black;
+  width: 100%;
+  height: 100%;
+  display: block;
   &::after {
     content: '';
     position: absolute;
@@ -34,7 +37,6 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: -1;
     opacity: 0.3;
     background-image: #{image-url('frc-background.png')};
     background-size: 24em;
